css bug on mobile fixed

--- a/src/index.css
+++ b/src/index.css
@@ -428,31 +428,6 @@ header {
 
 }
 
-/*-----------------------------------------AIRPLANE ANIMATION---------------------------------*/
-
-.hidden {
-  transform: translateX(-100%);
-  transition: 5s;
-}
-
-.show {
-  transform: translateX(0)
-}
-
-/*----------------------------------------FADE UP ANIMATIONS------------------------------------------*/
-
-.hidden_up {
-  transform: translateY(50%);
-  transition: 1s;
-}
-
-.show_up {
-  transform: translateY(0);
-}
-
-
-
-/*----------------------------------------------------------------------------------------------------*/
 
 
 
@@ -539,7 +514,35 @@ header {
   box-shadow: var(--bs);
 }
 
-@media (min-width: 780px) {}
+@media (min-width: 780px) {
+
+  /*-----------------------------------------AIRPLANE ANIMATION---------------------------------*/
+
+  .hidden {
+    transform: translateX(-100%);
+    transition: 5s;
+  }
+
+  .show {
+    transform: translateX(0)
+  }
+
+  /*----------------------------------------FADE UP ANIMATIONS------------------------------------------*/
+
+  .hidden_up {
+    transform: translateY(50%);
+    transition: 1s;
+  }
+
+  .show_up {
+    transform: translateY(0);
+  }
+
+
+}
+
+/*----------------------------------------------------------------------------------------------------*/
+
 
 /* My Work*/
 
